--- a/project.config
+++ b/project.config
@@ -7,3 +7,4 @@
 	label-Verified = -1..+1 group G3 Maintainers
 	rebase = group G3 Maintainers
 	submit = group G3 Maintainers
+	create = group G3 Maintainers
